--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>HEÖÐ¹úÏóÆå</title>
+<title>HEä¸­å›½è±¡æ£‹</title>
 <link rel="icon" type="image/x-icon" href="./guo.ico">
   <link rel="apple-touch-icon" href="./guo.ico">
 <link href="css/zzsc.css" type="text/css" rel="stylesheet" />
@@ -10,22 +12,22 @@
 <body>
 <div class="box" id="box">
 	<div class="chess_left">
-		<canvas id="chess"><h1>¶Ô²»Æð£¬ÄúµÄä¯ÀÀÆ÷²»Ö§³ÖHTML5£¬ÇëÉý¼¶ä¯ÀÀÆ÷ÖÁIE9¡¢firefox»òÕß¹È¸èä¯ÀÀÆ÷£¡</h1></canvas>
+		<canvas id="chess"><h1>å¯¹ä¸èµ·ï¼Œæ‚¨çš„æµè§ˆå™¨ä¸æ”¯æŒHTML5ï¼Œè¯·å‡çº§æµè§ˆå™¨è‡³IE9ã€firefoxæˆ–è€…è°·æ­Œæµè§ˆå™¨ï¼</h1></canvas>
 		<audio src="audio/click.wav" id="clickAudio" preload="auto"></audio>
 		<!--<audio src="audio/check.wav" id="checkAudio" preload="auto"></audio>-->
 		<audio src="audio/select.wav" id="selectAudio" preload="auto"></audio>
 		<div>
 			<div class="bn_box" id="bnBox">
-				<input type="button" name="offensivePlay" id="tyroPlay" value="ÐÂÊÖË®Æ½" />
-				<input type="button" name="offensivePlay" id="superPlay" value="ÖÐ¼¶Ë®Æ½" />
-                <input type="button" name="button" id="" value="´óÊ¦Ë®Æ½" disabled />
+				<input type="button" name="offensivePlay" id="tyroPlay" value="æ–°æ‰‹æ°´å¹³" />
+				<input type="button" name="offensivePlay" id="superPlay" value="ä¸­çº§æ°´å¹³" />
+                <input type="button" name="button" id="" value="å¤§å¸ˆæ°´å¹³" disabled />
 				<!--
-			<input type="button" name="offensivePlay" id="offensivePlay" value="ÏÈÊÖ¿ªÊ¼" />
-			<input type="button" name="defensivePlay" id="defensivePlay" value="ºóÊÖ¿ªÊ¼" />
+			<input type="button" name="offensivePlay" id="offensivePlay" value="å…ˆæ‰‹å¼€å§‹" />
+			<input type="button" name="defensivePlay" id="defensivePlay" value="åŽæ‰‹å¼€å§‹" />
 			-->
-				<input type="button" name="regret" id="regretBn" value="»ÚÆå" />
-				<input type="button" name="billBn" id="billBn" value="ÆåÆ×" class="bn_box" />
-				<input type="button" name="stypeBn" id="stypeBn" value="»»·ô" />
+				<input type="button" name="regret" id="regretBn" value="æ‚”æ£‹" />
+				<input type="button" name="billBn" id="billBn" value="æ£‹è°±" class="bn_box" />
+				<input type="button" name="stypeBn" id="stypeBn" value="æ¢è‚¤" />
 			</div>
 		</div>
 	</div>
